--- a/webProjects/test-site/index.html
+++ b/webProjects/test-site/index.html
@@ -23,19 +23,18 @@
         <ol>
             <li>the lazy dog</li>
         </ol>
-        
         <dl>
             <dt>description item</dt>
-            <dd>descrip tiondescriptionde scriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescriptionde scriptiondescriptio ndescriptiondescriptiondescriptiondescription definition</dd>
+            <dd>A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog. A quick brown fox jumps over the lazy dog.</dd>
         </dl>
 
-        <p>Read more by visiting.<a href="http://www.baidu.com">This website</a></p>
-        <a href="http://www.baidu.com" title="visit baidu" target="_blank"><img src="favicon.ico" alt="a image link Here"></a>
-        <a href="http://www.baidu.com">A link to baidu</a>
-
+        <p>Read more by visiting <a href="http://www.baidu.com">This website</a></p>
+        <a href="http://www.baidu.com" title="visit baidu" target="_blank">
+            <img src="favicon.ico" alt="a image link Here">
+        </a>
  
         <a href="#email_address">Check Address</a>
-        <a href="contact.html#email_adress">Check Address</a>
+        
         <button>Change User</button>
 
         <script src="scripts/main.js"></script>
