--- a/webProjects/test-site/index.html
+++ b/webProjects/test-site/index.html
@@ -8,7 +8,7 @@
         <title>Test Of Display</title>
     </head>
     <body>
-        <h1>THis is a Cool Header</h1>
+        <h1>This is a Cool Header</h1>
         <span style="font-size: 32px; margin: 21px 0; display: block;">Is this a top level heading?</span>
         <p id="email_address">Contact Us @xxxx</p>
         <!---img src="../test-site/images/icon0.png" alt="the"--->
@@ -30,9 +30,17 @@
 
         <p>Read more by visiting <a href="http://www.baidu.com">This website</a></p>
         <a href="http://www.baidu.com" title="visit baidu" target="_blank">
-            <img src="favicon.ico" alt="a image link Here">
+            <img src="images/icon0.png" alt="a image link Here">
         </a>
- 
+        <svg width="300" height="200">
+            <rect width="100%" height="200" fill ="black"/>
+            <circle cx="150" cy="100" r="90" fill="blue"/>
+            <polygon points="100,0 40,100 180,150" fill="green"></polygon>
+            <text x="50" y="100" font-family="Verdana" font-size="55"
+            fill="white" stroke="black" stroke-width="2">Hello!</text>
+        </svg>
+
+
         <a href="#email_address">Check Address</a>
         
         <button>Change User</button>
