--- a/webProjects/test-site/index.html
+++ b/webProjects/test-site/index.html
@@ -39,7 +39,11 @@
             <text x="50" y="100" font-family="Verdana" font-size="55"
             fill="white" stroke="black" stroke-width="2">Hello!</text>
         </svg>
-
+<picture>
+    <source media="(max-width: 799px)" srcset="image-480w-close-portrait.jpg">
+    <source media="(min-width: 800px)" srcset="elva-800w.jpg">
+    <img src="elva-800w.jpg" alt="Chris standing up holding his daughter Elva">
+</picture>
 
         <a href="#email_address">Check Address</a>
         
