--- a/webProjects/test-site/index.html
+++ b/webProjects/test-site/index.html
@@ -78,6 +78,11 @@
             <button>Change User</button>
         </div>
         
+        <ul class="links-list">
+            <li><a href="">Link one</a></li>
+            <li><a href="">Link two</a></li>
+            <li><a href="">Link three</a></li>
+          </ul> 
 
         <script src="scripts/main.js"></script>
     </body>
