--- a/webProjects/test-site/contact.html
+++ b/webProjects/test-site/contact.html
@@ -24,8 +24,8 @@
         padding: 5px;
       }
 
-      input[type="search"], input[type="submint"] {
-        height: 100%;
+      input[type="search"], #fldSearch {
+        height: 24px;
       }
 
       input[type="submit"] {
@@ -42,7 +42,7 @@
     <form method="post" action="" class="myform">
       <div>
         <label for="fldSearch">Keywords</label>
-        <input type="search" id="fldSearch" name="keywords">
+        <input id="fldSearch" name="keywords">
         <input type="submit" name="btnSubmit" value="Search"></div>
     </form>
 
