--- a/webProjects/test-site/contact.html
+++ b/webProjects/test-site/contact.html
@@ -5,46 +5,41 @@
     <title>Images and forms 2: styling form fields</title>
     <link rel="stylesheet" href="../styles.css"/>
     <style>
-
-      body {
-        background-color: #fff;
-        color: #333;
-        font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
-        padding: 1em;
-        margin: 0;
+      .wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 100px 100px;
+        gap: 20px;
+        
       }
 
-      .preview .myform input {
-        display: inline;
-        margin: 0;
-      }
-
-      .myform {
-        border: 2px solid #000;
-        padding: 5px;
-      }
-
-      input[type="search"], #fldSearch {
-        height: 24px;
-      }
-
-      input[type="submit"] {
-        background-color: purple;
-        color: white;
+      [class^="box"] {
+        background-color: aquamarine;
         border-radius: 10px;
-        border:0px;
       }
+      .box1 {
+        grid-column: 2 / 4;
+        grid-row: 1;
+    }
+
+.box2 {
+    grid-column: 1;
+    grid-row: 1 / 3;
+}
+
+.box3 {
+    grid-row: 2;
+    grid-column: 3;
+}
     </style>
   </head>
 
   <body>
-
-    <form method="post" action="" class="myform">
-      <div>
-        <label for="fldSearch">Keywords</label>
-        <input id="fldSearch" name="keywords">
-        <input type="submit" name="btnSubmit" value="Search"></div>
-    </form>
+    <div class="wrapper">
+      <div class="box1">One</div>
+      <div class="box2">Two</div>
+      <div class="box3">Three</div>
+    </div>
 
   </body>
 
