--- a/webProjects/WebDemos/Demos/heroes.html
+++ b/webProjects/WebDemos/Demos/heroes.html
@@ -63,6 +63,23 @@
         </section>
   
         <script>
+            // image sample
+            // fetch('icon0.png').then( response => {
+            //     if (!response.ok) {
+            //         throw new Error(response.status)
+            //     }
+            //     return response.blob()
+            // }).then( blob => {
+            //     let image = document.createElement('img')
+            //     image.src = URL.createObjectURL(blob)
+            //     document.body.appendChild(image)
+            // }
+               
+            // )
+            // .catch(error => {
+            //     console.log(error)
+            // })
+
             // url
             const requestURL = "https://mdn.github.io/learning-area/javascript/oojs/json/superheroes.json";
 
