--- a/webProjects/WebDemos/Demos/heroesForJSON.html
+++ b/webProjects/WebDemos/Demos/heroesForJSON.html
@@ -63,49 +63,8 @@
         </section>
   
         <script>
-            // image sample
-            // fetch('icon0.png').then( response => {
-            //     if (!response.ok) {
-            //         throw new Error(response.status)
-            //     }
-            //     return response.blob()
-            // }).then( blob => {
-            //     let image = document.createElement('img')
-            //     image.src = URL.createObjectURL(blob)
-            //     document.body.appendChild(image)
-            // }
-               
-            // )
-            // .catch(error => {
-            //     console.log(error)
-            // })
-
             // url
             const requestURL = "https://mdn.github.io/learning-area/javascript/oojs/json/superheroes.json";
-
-            fetch(requestURL)
-            .then( response => {
-                if (!response.ok) {
-                    throw new Error('HTTP error: $(response.status)')
-                }
-                // Promise{status: "resolved", reult: xxx}
-                return response.text()
-            })
-            .then (text => {
-                console.log(text)
-                populateHeader(JSON.parse(text))
-                showHeroes(JSON.parse(text))
-            })
-            .catch(error => {
-                console.log(error)
-            })
-            
-            // const request = new Request(requestURL);
-            // const response = await fetch(request);
-            // const superHeroes = await response.json();
-
-            // populateHeader(superHeroes);
-            // populateHeroes(superHeroes);
 
             // http requst
             // let request = new XMLHttpRequest()
@@ -122,6 +81,35 @@
             //     showHeroes(response)
             // }
 
+            // fetch
+            // fetch(requestURL)
+            // .then( response => {
+            //     if (!response.ok) {
+            //         throw new Error('HTTP error: $(response.status)')
+            //     }
+            //     // Promise{status: "resolved", reult: xxx}
+            //     return response.json()
+            // })
+            // .then (json => {
+            //     populateHeader(json)
+            //     showHeroes(json)
+            //     // populateHeader(JSON.parse(text))
+            //     // showHeroes(JSON.parse(text))
+            // })
+            // .catch(error => {
+            //     console.log(error)
+            // })
+
+            // async
+            async function myFetch() {
+                const response = await fetch(requestURL);
+                const superHeroes = await response.json();
+                populateHeader(superHeroes);
+                showHeroes(superHeroes);
+            }
+            myFetch().catch( error => {
+                console.log(error)
+            })
 
 /*
 {
