--- a/webProjects/WebDemos/index.html
+++ b/webProjects/WebDemos/index.html
@@ -34,6 +34,7 @@
         </a>
         
         <div>
+            <textarea>by default this element is filled with this text</textarea>
             <svg width="300" height="200">
                 <rect width="100%" height="200" fill ="black"/>
                 <circle cx="150" cy="100" r="90" fill="blue"/>
